# assignment_code_follow

./: CMakeLists.txt  README.md  notes  package.xml
include/assignment_code_follow/: detectObstacle.h  environmentSensing.h  fetch_lidar_output.h  fetch_setup_temp.h  follow_marker.h  laserScan.h  marker_turtle_teleop.h
launch/: marker_follow.launch  spawn_fetch_setup.launch
models/Computer/: model.config  model.sdf
models/Computer/meshes/: Computer.dae
models/Plant/: model.config  model.sdf
models/Plant/meshes/: Plant.dae
models/Table/: model.config  model.sdf
models/Table/meshes/: Table.dae
models/custom_turtle/: model.sdf
models/custom_turtle/materials/scripts/: cube.material
models/man/: model.config  model.sdf
models/man/meshes/: man.dae
models/man_red/: model.config  model.sdf
models/marker232/: model.config  model.sdf
models/marker232/meshes/: marker232.dae
models/marker800/: model.config  model.sdf
models/marker800/meshes/: marker800.dae
models/markerBox150/: model.config  model.sdf
models/markerBox150/materials/scripts/: marker.material
models/newTurtle/: model.sdf
models/newTurtle/materials/scripts/: cube.material
models/newTurtle/meshes/: cubemesh.dae
models/office/: model.config  model.sdf
models/office/meshes/: office.dae
models/officeChair/: model.config  model.sdf
models/officeChair/meshes/: officeChair.dae
models/officeDeskCurved/: model.config  model.sdf
models/officeDeskCurved/meshes/: officeDeskCurved.dae
rviz/: rviz_fetch_debug.rviz
src/: controller.py  detectObstacle.cpp  environmentSensing.cpp  fetch_lidar_output.cpp  fetch_odom_reading.py  fetch_setup_temp.cpp  follow_marker.cpp  laserScan.cpp  main.cpp  marker_turtle_teleop.cpp  teleop_marker_path.py
worlds/: default.sdf  test_zone.sdf  world_setup.sdf
